# platform

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  cli.just  deny.toml  install.sh  mcp.just  test-report.txt  ui.just
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.sqlx/: query-0138d629a50c105cd0a01cdf2ae2af74851a499f7b94a507ced5243eb181f9df.json  query-0271cee4bc0f087f54029fe355b390aaa93326981d2d1b00d1188a637f1cc24b.json  query-02fb0789f59c5b80977d437d74e3aed87bec31bfe489737aee4e287a87d53512.json  query-03580aaf79137c8d3b673b6815f4369ca30cdbf1537e3e4c2379caeb17baa5e4.json  query-03d0d693a4843f80816bf6233de2a9035c999a8354ee0eb2644fe39d73c3a703.json  query-041ce7e86d9a3df8c3bb133b8b8f6c2f543459943a5b2fed951df78c6bf49604.json  query-04375bba0a14560a72d0d93cd9f221ee83ccc8b1e8c191dec70072bb98997f8e.json  query-0444ea7a36291535e7ea300a873059a73a561501db006baaf7e6f08540e671db.json  query-057941de2a728e8eaa8b32e70fdea0db917ea87fffd57d39048ea7508aa9f5ed.json  query-05cd0bf1ed1597870aa5a103d49e90769ff718b0d3ef1b3f437c29db58ffe758.json  query-05f00b3b2c10f846550ad670f4d8e9ab579fdd46efd164ccb4418c0c79332802.json  query-07f53ad72dd6fbc7e509f1192c2c4871ef8c458d8891b6cbd189a421885295d4.json  query-0906ea4a95a872316100e2057b7419f24f2a8b9a2058eeb1250d4593faed0bc4.json  query-090a3530098b6e2d92a3aac15d4f72edca8a1c6a2e34869bc7210c704ce25fa8.json  query-0973a4200e57695fd4894b5b70649ce63176f5aac6b40044a10a0d74b4a0c937.json  query-097ba3d898ad0676bd7f878218731c824b778b1e92d99cc0de0c78ccf0c0c60a.json  query-0a4d26106dc97b99908ed8f1fb2427d97b8c367f907c50c919ced925eaefe32c.json  query-0a78874b71ea18477de6cb24b6e7f1326dd489d6924df482ce7bd5460b9610ae.json  (+424 more)
cli/agent-runner/: Cargo.toml
cli/agent-runner/src/: control.rs  error.rs  llm_tests.rs  main.rs  mcp.rs  messages.rs  progress_watcher.rs  pubsub.rs  render.rs  repl.rs  transport.rs
crates/bins/platform/: Cargo.toml
crates/bins/platform-agent-runner/: Cargo.toml
crates/bins/platform-agent-runner/src/: control.rs  error.rs  llm_tests.rs  main.rs  mcp.rs  messages.rs  progress_watcher.rs  pubsub.rs  render.rs  repl.rs  transport.rs
crates/bins/platform-ingest/: Cargo.toml
crates/bins/platform-ingest/src/: health.rs  lib.rs  main.rs  state.rs
crates/bins/platform-ingest/tests/: ingest_integration.rs
crates/bins/platform-seed/: Cargo.toml
crates/bins/platform-seed/src/: main.rs
crates/bins/platform/src/: bootstrap.rs  config.rs  eventbus.rs  git.rs  git_services.rs  lib.rs  main.rs  passkey.rs  secrets_request.rs  services.rs  state.rs  ui.rs
crates/bins/platform/src/api/: admin.rs  alerts.rs  commands.rs  deployments.rs  flags.rs  gpg_keys.rs  health.rs  helpers.rs  issues.rs  llm_providers.rs  merge_requests.rs  mod.rs  onboarding.rs  passkeys.rs  pipelines.rs  preview.rs  projects.rs  secrets.rs  sessions.rs  setup.rs  ssh_keys.rs  user_keys.rs  users.rs  webhooks.rs  workspaces.rs
crates/bins/platform/src/demo/: demo_project.rs  mod.rs
crates/bins/platform/src/demo/templates/: Dockerfile.dev  Dockerfile.test  VERSION  dev.md  platform_v0.1.yaml  platform_v0.2.yaml  requirements.txt
crates/bins/platform/src/demo/templates/app/: cart.py  flags.py
crates/bins/platform/src/demo/templates/app/templates/: base.html  cart.html  catalog.html  orders.html  product.html
crates/bins/platform/src/demo/templates/deploy/: deployment-v0.1.yaml  deployment-v0.2.yaml  traffic-generator.yaml  variables_prod.yaml  variables_staging.yaml
crates/bins/platform/src/demo/templates/screenshots/: capture.py  render.py
crates/bins/platform/src/demo/templates/testinfra/: postgres.yaml
crates/bins/platform/src/demo/templates/tests-e2e/: test_app.py
crates/bins/platform/src/registry/: auth.rs  blobs.rs  manifests.rs  mod.rs  tags.rs
crates/bins/platform/tests/: e2e_demo.rs
crates/bins/platform/tests/e2e_helpers/: mod.rs
crates/foundation/platform-types/: Cargo.toml
crates/foundation/platform-types/src/: events.rs  lib.rs  traits.rs  validation.rs
crates/libs/platform-agent/: Cargo.toml
crates/libs/platform-agent/src/: claude_auth.rs  lib.rs  service.rs  state.rs
crates/libs/platform-agent/tests/: agent_crate_integration.rs  agent_integration.rs
crates/libs/platform-auth/: Cargo.toml
crates/libs/platform-auth/src/: lib.rs  passkey.rs  resolver.rs
crates/libs/platform-deployer/: Cargo.toml
crates/libs/platform-deployer/src/: applier.rs  error.rs  gateway.rs  image_inspect.rs  lib.rs  preview.rs  reconciler.rs  renderer.rs  types.rs
crates/libs/platform-deployer/tests/: proxy_integration.rs
crates/libs/platform-git/: Cargo.toml
crates/libs/platform-git/src/: db_services.rs  lib.rs  server_services.rs
crates/libs/platform-git/tests/: repo_integration.rs
crates/libs/platform-observe/: Cargo.toml
crates/libs/platform-observe/src/: alert.rs  auth.rs  error.rs  ingest.rs  lib.rs  parquet.rs  partitions.rs  query.rs  state.rs  store.rs
crates/libs/platform-observe/tests/: observe_integration.rs
crates/libs/platform-operator/: Cargo.toml
crates/libs/platform-operator/src/: health.rs
crates/libs/platform-operator/tests/: gateway_k8s.rs  health_integration.rs
crates/libs/platform-operator/tests/helpers/: mod.rs
crates/libs/platform-ops-repo/: Cargo.toml
crates/libs/platform-ops-repo/src/: lib.rs
crates/libs/platform-ops-repo/tests/: ops_repo_integration.rs
crates/libs/platform-pipeline/: Cargo.toml
crates/libs/platform-pipeline/src/: concrete.rs  config.rs  definition.rs  error.rs  executor.rs  lib.rs  state.rs  trigger.rs
crates/libs/platform-pipeline/tests/: pipeline_db_integration.rs  pipeline_k8s_integration.rs
crates/libs/platform-pipeline/tests/helpers/: mod.rs
crates/proxy/: Cargo.toml
crates/proxy-init/: Cargo.toml
crates/proxy-init/src/: main.rs
crates/proxy/src/: main.rs
crates/proxy/src/proxy/: config.rs  inbound.rs  mod.rs  outbound.rs  tls.rs  transparent.rs
crates/proxy/src/proxy/gateway/: mod.rs  watcher.rs
docker/: Dockerfile  Dockerfile.claude-runner  entrypoint.sh  (+12 more)
(+670 files in other folders)
