[package]
name = "platform"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Unified AI-first platform"
repository = "https://github.com/agentsphere/platform"

[[bin]]
name = "platform"
path = "src/main.rs"

[dependencies]
# HTTP + SSE
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "fs", "limit", "set-header"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "ipnetwork",
] }

# IP address types for INET columns
ipnetwork = "0.21"

# Kubernetes
kube = { version = "3", features = ["runtime", "client", "ws"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# OTEL / observability
prost = "0.14"
prost-types = "0.14"
arrow = { version = "58", features = ["json"] }
parquet = { version = "58", features = ["async"] }

# Object storage
opendal = { version = "0.55", features = ["services-s3"] }

# Cache / pubsub
fred = { version = "10", features = ["subscriber-client"] }

# WebSocket proxying (preview iframes)
tokio-tungstenite = "0.28"

# HTTP body utilities
http-body-util = "0.1"
bytes = "1"

# Auth / crypto
argon2 = "0.5"
aes-gcm = "0.10"
hmac = "0.12"
rand = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# SSH key parsing
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "ecdsa"] }

# SSH server
russh = "0.56"
russh-keys = "0.49"
async-trait = "0.1"

# GPG key parsing
pgp = "~0.19"

# WebAuthn (passkeys)
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
webauthn-rs-proto = "0.5"
# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Templating
minijinja = "2"

# HTTP client (webhooks)
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "stream",
] }

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI / config
clap = { version = "4", features = ["derive", "env"] }

# Chrono
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# URL parsing (webhook SSRF validation)
url = "2"

# OCI image tarball parsing (registry seeding)
tar = "0.4"
flate2 = "1"
fs2 = "0.4"

# Embedded UI
rust-embed = { version = "8", features = ["compression"] }

# TLS crypto provider (needed by kube-client, reqwest, lettre)
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# TypeScript type generation
ts-rs = { version = "12", features = ["chrono-impl", "uuid-impl", "serde-compat", "serde-json-impl"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1", features = ["full"] }
proptest = "1"
rstest = "0.26"
wiremock = "0.6"
tempfile = "3"
webauthn-authenticator-rs = { version = "0.5", features = ["softpasskey"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
