[workspace]
resolver = "3"
members = [
    # foundation — core types used by almost everything
    "crates/foundation/platform-types",
    # libs — domain modules shared across binaries
    "crates/libs/platform-auth",
    "crates/libs/platform-observe",
    "crates/libs/platform-secrets",
    "crates/libs/platform-k8s",
    "crates/libs/platform-git",
    "crates/libs/platform-registry",
    "crates/libs/platform-agent",
    "crates/libs/platform-pipeline",
    "crates/libs/platform-ops-repo",
    "crates/libs/platform-deployer",
    "crates/libs/platform-webhook",
    "crates/libs/platform-notify",
    "crates/libs/platform-mesh",
    "crates/libs/platform-operator",
    # bins — standalone deployable binaries
    "crates/bins/platform-agent-runner",
    "crates/bins/platform-ingest",
    "crates/bins/platform-k8s-watcher",
    "crates/bins/platform-proxy",
    "crates/bins/platform-proxy-init",
    "crates/bins/platform-seed",
    "crates/bins/platform",
]

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
