[package]
name = "agent-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-runner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
anyhow = "1"
thiserror = "2"
tempfile = "3"
fred = { version = "10", features = ["subscriber-client"] }
notify = "8"

[dev-dependencies]
serial_test = "3"

[lints.rust]
unsafe_code = "forbid"
