[package]
name = "platform-proxy-init"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Shell-free iptables init container for transparent proxy mesh"

[[bin]]
name = "platform-proxy-init"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
