[package]
name = "platform-proxy"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Platform-native service mesh proxy and ingress gateway"

[[bin]]
name = "platform-proxy"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# TLS (rustls only — no openssl)
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["x509-parser"] }

# Lock-free cert rotation
arc-swap = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OTLP protobuf
prost = "0.14"
prost-types = "0.14"

# HTTP client (OTLP export, webhook delivery)
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# HTTP proxy (gateway mode)
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "client-legacy"] }
http-body-util = "0.1"

# Gateway route matching
regex = "1"
dashmap = "6"

# Kubernetes (gateway CRD watching)
kube = { version = "3", features = ["runtime", "client"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

# Database (for postgres/redis metrics scraping)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }

# Crypto
rand = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Signal handling (PID 1 process wrapper)
nix = { version = "0.29", features = ["signal", "process", "net"] }

# UUID
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rstest = "0.25"
proptest = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
