[package]
name = "platform-agent-runner"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[[bin]]
name = "agent-runner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
anyhow = "1"
thiserror = "2"
tempfile = "3"
fred = { version = "10", features = ["subscriber-client"] }
notify = "7"

[dev-dependencies]
serial_test = "3"

[lints.rust]
# "deny" (not "forbid") so test helpers can #[allow(unsafe_code)] for env::set_var
# which became unsafe in edition 2024.
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
