[package]
name = "platform-ingest"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[lib]
name = "platform_ingest"
path = "src/lib.rs"

[[bin]]
name = "platform-ingest"
path = "src/main.rs"

[dependencies]
platform-types = { path = "../../foundation/platform-types" }
platform-auth = { path = "../../libs/platform-auth" }
platform-observe = { path = "../../libs/platform-observe" }

# HTTP
axum = { version = "0.8", features = ["macros"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Cache / pubsub
fred = { version = "10", features = ["subscriber-client"] }

# UUID + chrono
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Protobuf (for decode)
prost = "0.14"

# CLI / config
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
anyhow = "1"

# TLS crypto provider
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
chrono = "0.4"
hex = "0.4"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
