[package]
name = "platform-seed"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[[bin]]
name = "platform-seed"
path = "src/main.rs"

[dependencies]
platform-auth = { path = "../../libs/platform-auth" }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# K8s
kube = { version = "3", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# Crypto / random
rand = "0.10"
hex = "0.4"

# TLS crypto provider
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
