[package]
name = "platform-next"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
default-run = "platform-next"

[[bin]]
name = "platform-next"
path = "src/main.rs"

[dependencies]
# Workspace crates
platform-types = { path = "../../foundation/platform-types", features = ["kube", "opendal", "ts"] }
platform-auth = { path = "../../libs/platform-auth" }
platform-pipeline = { path = "../../libs/platform-pipeline" }
platform-deployer = { path = "../../libs/platform-deployer" }
platform-git = { path = "../../libs/platform-git" }
platform-observe = { path = "../../libs/platform-observe" }
platform-agent = { path = "../../libs/platform-agent" }
platform-notify = { path = "../../libs/platform-notify" }
platform-webhook = { path = "../../libs/platform-webhook" }
platform-registry = { path = "../../libs/platform-registry" }
platform-secrets = { path = "../../libs/platform-secrets" }
platform-mesh = { path = "../../libs/platform-mesh" }
platform-k8s = { path = "../../libs/platform-k8s" }
platform-ops-repo = { path = "../../libs/platform-ops-repo" }
platform-operator = { path = "../../libs/platform-operator" }

# HTTP framework
axum = { version = "0.8", features = ["json", "macros", "ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "compression-gzip",
    "set-header",
    "limit",
    "timeout",
    "trace",
] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
    "migrate",
] }

# Cache / pubsub
fred = { version = "10", features = ["subscriber-client"] }

# Object storage
opendal = { version = "0.55", features = ["services-s3"] }

# Kubernetes
kube = { version = "3", default-features = false, features = ["client"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs + time
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# WebSocket proxying
tokio-tungstenite = "0.28"

# Error handling
anyhow = "1"
thiserror = "2"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# WebAuthn
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"

# URL parsing
url = "2"

# IP address types
ipnetwork = "0.20"

# Embedded UI
rust-embed = { version = "8", features = ["compression"] }

# TypeScript type generation
ts-rs = { version = "12", features = ["chrono-impl", "uuid-impl", "serde-compat", "serde-json-impl"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
