[package]
name = "platform-types"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[features]
default = []
kube = ["dep:kube"]
opendal = ["dep:opendal"]
ts = ["dep:ts-rs"]

[dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# HTTP (for ApiError IntoResponse)
axum = { version = "0.8", default-features = false, features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
] }

# IP address types for INET columns
ipnetwork = "0.20"

# Cache / pubsub
fred = { version = "10", features = ["subscriber-client"] }

# UUID + chrono
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# URL parsing (for SSRF validation)
url = "2"

# Tracing
tracing = "0.1"

# Async runtime (for tokio::spawn in audit)
tokio = { version = "1", features = ["rt"] }

# Kubernetes (optional)
kube = { version = "3", optional = true, default-features = false, features = ["client"] }

# Object storage (optional)
opendal = { version = "0.55", optional = true, features = ["services-s3"] }

# TypeScript type generation (optional)
ts-rs = { version = "12", optional = true, features = ["chrono-impl", "uuid-impl", "serde-compat", "serde-json-impl"] }

[dev-dependencies]
rstest = "0.25"
proptest = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "ipnetwork", "migrate"] }
fred = { version = "10", features = ["subscriber-client"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
