[package]
name = "platform-agent"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
platform-types = { path = "../../foundation/platform-types" }
platform-auth = { path = "../platform-auth" }
platform-secrets = { path = "../platform-secrets" }
platform-k8s = { path = "../platform-k8s" }
platform-registry = { path = "../platform-registry" }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
kube = { version = "3", features = ["runtime", "client", "ws"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }
fred = { version = "10", features = ["subscriber-client"] }
opendal = { version = "0.55", features = ["services-s3"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
tracing = "0.1"
hex = "0.4"
rand = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
serde_json = "1"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
