[package]
name = "platform-auth"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
platform-types = { path = "../../foundation/platform-types" }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
axum = { version = "0.8", default-features = false, features = ["json", "tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
] }

# IP address types
ipnetwork = "0.20"

# Cache / pubsub
fred = { version = "10", features = ["subscriber-client"] }

# UUID + chrono
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"

# Auth / crypto
sha2 = "0.10"
hex = "0.4"
rand = "0.10"
argon2 = "0.5"

# WebAuthn (passkeys)
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
url = "2"

# Async runtime
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "ipnetwork", "migrate"] }
tokio = { version = "1", features = ["rt", "macros"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
