[package]
name = "platform-deployer"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
# Workspace crates
platform-types = { path = "../../foundation/platform-types", features = ["kube"] }

# Kubernetes
kube = { version = "3", default-features = false, features = ["client"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

# Templating
minijinja = "2"

# Cache / pubsub
fred = { version = "10", features = ["subscriber-client"] }

# Caching
dashmap = "6"

# Object storage
opendal = { version = "0.55", features = ["services-s3"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Async
tokio = { version = "1", features = ["time", "sync"] }
tokio-util = "0.7"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"

# Encoding
base64 = "0.22"

[dev-dependencies]
serde_yaml = "0.9"
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
