[package]
name = "platform-git"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"
description = "Git operations library for the platform"

[dependencies]
platform-types = { path = "../../foundation/platform-types", default-features = false }
platform-auth = { path = "../platform-auth" }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["process", "fs", "sync", "time", "io-util", "net"] }
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "ecdsa"] }
pgp = "~0.15"
hex = "0.4"
base64 = "0.22"

# HTTP framework (smart HTTP, browser, LFS handlers)
axum = { version = "0.8", features = ["macros"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io", "rt"] }

# Valkey (for event publishing in post-receive handler)
fred = { version = "10", default-features = false, features = ["subscriber-client"] }

# Database (for DB-backed trait implementations)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# SSH server
russh = "0.49"
russh-keys = "0.49"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
