[package]
name = "platform-observe"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
platform-types = { path = "../../foundation/platform-types", features = ["opendal"] }
platform-auth = { path = "../platform-auth" }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
axum = { version = "0.8", default-features = false, features = ["json", "query", "tokio", "http1"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# Cache / pubsub
fred = { version = "10", features = ["subscriber-client"] }

# UUID + chrono
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Tracing
tracing = "0.1"

# Protobuf
prost = "0.14"
hex = "0.4"

# Compression
flate2 = "1"

# Regex for log alert filters
regex = "1"

# Object storage (MinIO)
opendal = { version = "0.55", features = ["services-s3"] }

# Parquet / Arrow
arrow = { version = "57", features = ["json"] }
parquet = { version = "57", features = ["async"] }

# SSE streaming
tokio-stream = { version = "0.1", features = ["sync"] }

# Async runtime
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
rstest = "0.25"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
tokio = { version = "1", features = ["rt", "macros"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
