[package]
name = "platform-operator"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
# Workspace crates
platform-types = { path = "../../foundation/platform-types", features = ["kube"] }

# Kubernetes
kube = { version = "3", default-features = false, features = ["client"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Cache
fred = { version = "10", features = ["subscriber-client"] }

# Object storage
opendal = { version = "0.55", features = ["services-s3"] }

# Async
tokio = { version = "1", features = ["time", "sync", "process", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
fred = { version = "10", features = ["subscriber-client"] }
kube = { version = "3", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }
opendal = { version = "0.55", features = ["services-s3"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
platform-types = { path = "../../foundation/platform-types" }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
