[package]
name = "platform-ops-repo"
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[dependencies]
# Platform crates
platform-types = { path = "../../foundation/platform-types" }
platform-git = { path = "../platform-git" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid"] }

# Async
tokio = { version = "1", features = ["process", "fs"] }

# Serialization
serde_json = "1"
serde_yaml = "0.9"

# IDs
uuid = { version = "1", features = ["v4"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "process", "fs"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
